// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`side-nav/CollapseButton snapshot tests renders minimized 1`] = `
<div
  aria-pressed={false}
  className="hig--light-theme hig__side-nav__module__collapse-button hig__side-nav__module__collapse-button--collapsed"
  onClick={undefined}
  onKeyDown={undefined}
  role="button"
  tabIndex={0}
>
  <svg
    height="10"
    viewBox="0 0 10 10"
    width="10"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      caret-down-m
    </title>
    <path
      d="M8.71 3.22a.75.75 0 0 0-1.06 0L5 5.87 2.35 3.22a.75.75 0 0 0-1.06 0 .74.74 0 0 0 0 1.06l3.36 3.36a.5.5 0 0 0 .7 0l3.36-3.36a.74.74 0 0 0 0-1.06z"
    />
  </svg>
</div>
`;

exports[`side-nav/CollapseButton snapshot tests renders with event handlers 1`] = `
<div
  aria-pressed={true}
  className="hig--light-theme hig__side-nav__module__collapse-button"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="button"
  tabIndex={0}
>
  <svg
    height="10"
    viewBox="0 0 10 10"
    width="10"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      caret-down-m
    </title>
    <path
      d="M8.71 3.22a.75.75 0 0 0-1.06 0L5 5.87 2.35 3.22a.75.75 0 0 0-1.06 0 .74.74 0 0 0 0 1.06l3.36 3.36a.5.5 0 0 0 .7 0l3.36-3.36a.74.74 0 0 0 0-1.06z"
    />
  </svg>
</div>
`;

exports[`side-nav/CollapseButton snapshot tests renders with no props 1`] = `
<div
  aria-pressed={true}
  className="hig--light-theme hig__side-nav__module__collapse-button"
  onClick={undefined}
  onKeyDown={undefined}
  role="button"
  tabIndex={0}
>
  <svg
    height="10"
    viewBox="0 0 10 10"
    width="10"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      caret-down-m
    </title>
    <path
      d="M8.71 3.22a.75.75 0 0 0-1.06 0L5 5.87 2.35 3.22a.75.75 0 0 0-1.06 0 .74.74 0 0 0 0 1.06l3.36 3.36a.5.5 0 0 0 .7 0l3.36-3.36a.74.74 0 0 0 0-1.06z"
    />
  </svg>
</div>
`;
